fixed card stuck out to the side

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -15,4 +15,7 @@ body {
 	height: 100%;
 }
 
+.row {
+	margin: 0;
+}
 
